--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <div class="header">
         <h1>Marine Litter Monitoring</h1>
-        <p>A <b>responsive WebGIS</b> developed by madeoka <i>(beta version)<i></p>
+        <p>A <b>responsive WebGIS</b> developed by madeoka</p>
     </div>
     <div class="navbar">
         <!--  <a href="#" class="active">Home</a> -->
@@ -177,7 +177,7 @@
 
 
     <div class="footer">
-        <h5>&copy;2024</h5>
+        <h5>&copy;2024 (beta version)</h5>
     </div>
 
 </body>
