--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <div class="header">
         <h1>Marine Litter Monitoring</h1>
-        <p>A <b>responsive WebGIS</b> developed by madeoka</p>
+        <p>A <b>responsive WebGIS</b> developed by <a href="https://www.linkedin.com/in/madeoka/">madeoka</a></p>
     </div>
     <div class="navbar">
         <!--  <a href="#" class="active">Home</a> -->
