--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
 
     <div class="main">
-        <div class="fakeimg" style="height:400px;">Image</div>
+        <style>.embed-container {position: relative; padding-bottom: 75%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="800" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Marine Litter Monitoring" src="//chibauniv.maps.arcgis.com/apps/Embed/index.html?webmap=52f8c960278647259009566ac808bb60&extent=114.2563,-8.8571,115.9427,-7.9673&home=true&zoom=true&previewImage=false&scale=true&legend=true&basemap_toggle=true&alt_basemap=topo&disable_scroll=true&theme=light"></iframe></div>
     </div>
 
 
