--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         /* Header/logo Title */
         .header {
-            padding: 10px;
+            padding: 5px;
             text-align: center;
             background: #b9e2f5;
             color: #475c6c;
@@ -140,38 +140,20 @@
         <a href="#"></a>
     </div>
 
-    <!-- This is a comment -->
-    <!--
-<div class="row">
-  <div class="side">
-    <h2>About Me</h2>
-    <h5>Photo of me:</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    <h3>More Text</h3>
-    <p>Lorem ipsum dolor sit ame.</p>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div>
-  </div>
-  <div class="main">
-    <h2>TITLE HEADING</h2>
-    <h5>Title description, Dec 7, 2017</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-    <br>
-    <h2>TITLE HEADING</h2>
-    <h5>Title description, Sep 2, 2017</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-  </div>
-</div>  -->
-
 
     <div class="main">
-        <style>.embed-container {position: relative; padding-bottom: 75%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="800" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Marine Litter Monitoring" src="//chibauniv.maps.arcgis.com/apps/Embed/index.html?webmap=52f8c960278647259009566ac808bb60&extent=114.2563,-8.8571,115.9427,-7.9673&home=true&zoom=true&previewImage=false&scale=true&legend=true&basemap_toggle=true&alt_basemap=topo&disable_scroll=true&theme=light"></iframe></div>
+        <style>
+        .embed-container {position: relative; padding-bottom: 75%; height: 0; max-width: 100%;} 
+        .embed-container iframe, 
+        .embed-container object, 
+        .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}
+        </style>
+        <div class="embed-container">
+            <iframe width="500" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
+            title="Marine Litter Monitoring" 
+            src="//chibauniv.maps.arcgis.com/apps/Embed/index.html?webmap=52f8c960278647259009566ac808bb60&extent=114.2563,-8.8571,115.9427,-7.9673&home=true&zoom=true&previewImage=false&scale=true&legend=true&basemap_toggle=true&alt_basemap=topo&disable_scroll=true&theme=light">
+            </iframe>
+        </div>
     </div>
 
 
