--- a/index.html
+++ b/index.html
@@ -1,184 +1,157 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <link rel="stylesheet" href="./resources/ol.css">
+        <link rel="stylesheet" href="resources/fontawesome-all.min.css">
+        <link href="resources/photon-geocoder-autocomplete.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
+        <link rel="stylesheet" href="./resources/qgis2web.css">
 
-<head>
-    <title>Marine Litter Monitoring</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-
-        /* Style the body */
-        body {
-            font-family: Arial, Helvetica, sans-serif;
+        <style>
+        html, body {
+            background-color: #ffffff;
+            width: 100%;
+            height: 100%;
+            padding: 0;
             margin: 0;
         }
-
-        /* Header/logo Title */
-        .header {
-            padding: 5px;
-            text-align: center;
-            background: #b9e2f5;
-            color: #475c6c;
-        }
-
-        /* Increase the font size of the heading */
-        .header h1 {
-            font-size: 40px;
-        }
-
-        /* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
-        .navbar {
-            overflow: hidden;
-            background-color: #50b8e7;
-            position: sticky;
-            position: -webkit-sticky;
-            top: 0;
-        }
-
-        /* Style the navigation bar links */
-        .navbar a {
-            float: left;
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 20px;
-            text-decoration: none;
-        }
-
-
-        /* Right-aligned link */
-        .navbar a.right {
-            float: right;
-        }
-
-        /* Change color on hover */
-        .navbar a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        /* Active/current link */
-        .navbar a.active {
-            background-color: #666;
-            color: white;
-        }
-
-        /* Column container */
-        .row {
-            display: -ms-flexbox;
-            /* IE10 */
-            display: flex;
-            -ms-flex-wrap: wrap;
-            /* IE10 */
-            flex-wrap: wrap;
-        }
-
-        /* Create two unequal columns that sits next to each other */
-        /* Sidebar/left column */
-        .side {
-            -ms-flex: 30%;
-            /* IE10 */
-            flex: 30%;
-            background-color: #f1f1f1;
-            padding: 20px;
-        }
-
-        /* Main column */
-        .main {
-            -ms-flex: 70%;
-            /* IE10 */
-            flex: 70%;
-            background-color: white;
-            padding: 20px;
-        }
-
-        /* Fake image, just for this example */
-        .fakeimg {
-            background-color: #edf7fc;
+        #map {
             width: 100%;
-            padding: 20px;
+            height: 100%;
+        }
+        .ol-control > * {
+            background-color: #f8f8f8!important;
+            color: #444444!important;
+            border-radius: 0px;
+        }
+        .ol-attribution a, .gcd-gl-input::placeholder, .search-layer-input-search::placeholder {
+            color: #444444!important;
+        }
+        .search-layer-input-search {
+            background-color: #f8f8f8!important;
+        }
+        .ol-control > *:focus, .ol-control >*:hover {
+            background-color: rgba(248, 248, 248, 0.7)!important;
+        } 
+        .ol-control {
+            background-color: rgba(255,255,255,.4) !important;
+            padding: 2px !important;
         }
 
-        /* Footer */
-        .footer {
-            padding: 3px;
-            text-align: center;
-            background-color: #50b8e7;
-            color: #475c6c;
+        /* ====== BAR LOGO + JUDUL DI ATAS PETA ====== */
+        #logo-bar {
+            position: absolute;
+            top: 8.5px;
+            left: 50px;
+            z-index: 1000; /* di atas peta dan kontrol OL */
+            background: rgba(255, 255, 255, 0.9);
+            padding: 6px 10px;
+            border-radius: 4px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.3);
+            font-family: sans-serif;
+            max-width: 450px;
         }
 
-        /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-        @media screen and (max-width: 700px) {
-            .row {
-                flex-direction: column;
-            }
+        /* grup dua logo */
+        #logo-bar .logo-group {
+            display: flex;
+            align-items: center;
+            gap: 6px;
         }
 
-        /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-        @media screen and (max-width: 400px) {
-            .navbar a {
-                float: none;
-                width: 100%;
-            }
+        #logo-bar .logo-group a {
+            display: block;
         }
-    </style>
-</head>
 
-<body>
+        #logo-bar .logo-group img {
+            height: 30px;   /* ubah kalau mau lebih besar */
+            width: auto;
+            display: block;
+            cursor: pointer;
+        }
 
-    <div class="header">
-        <h1>Marine Litter Monitoring</h1>
-        <p>A <b>responsive WebGIS</b> developed by <a href="https://www.linkedin.com/in/madeoka/">madeoka</a></p>
-    </div>
-    <div class="navbar">
-        <!--  <a href="#" class="active">Home</a> -->
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-    </div>
+        #logo-bar .title-block {
+            display: flex;
+            flex-direction: column;
+        }
 
+        #logo-bar .title-text {
+            font-weight: 600;
+            font-size: 13px;
+            line-height: 1.3;
+        }
 
-    <div class="main">
-        <style>
-            .embed-container {
-                position: relative;
-                padding-bottom: 133%;
-                height: 0;
-                max-width: 100%;
-            }
-        
-            .embed-container iframe,
-            .embed-container object,
-            .embed-container iframe {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-            }
-        
-            small {
-                position: absolute;
-                z-index: 40;
-                bottom: 0;
-                margin-bottom: -15px;
-            }
+        #logo-bar .subtitle-text {
+            font-weight: 400;
+            font-size: 11px;
+            color: #555;
+            line-height: 1.2;
+        }
         </style>
-        <div class="embed-container"><iframe width="300" height="200" frameborder="0" scrolling="no" marginheight="0"
-                marginwidth="0" title="Marine Litter Monitoring"
-                src="//chibauniv.maps.arcgis.com/apps/Embed/index.html?webmap=52f8c960278647259009566ac808bb60&extent=114.2771,-8.8893,115.9635,-7.9995&home=true&zoom=true&previewImage=false&scale=true&legend=true&disable_scroll=true&theme=light"></iframe>
+
+        <title>Feasibility Study Jalan Penghubung Badung–Gianyar</title>
+    </head>
+    <body>
+        <div id="map">
+
+            <!-- ====== LOGO + JUDUL KEGIATAN ====== -->
+            <div id="logo-bar">
+                <div class="logo-group">
+                    <!-- Logo Universitas Warmadewa -->
+                    <a href="https://teknik.warmadewa.ac.id/" target="_blank" rel="noopener noreferrer">
+                        <img src="images/unwar.png" alt="Universitas Warmadewa">
+                    </a>
+                    <!-- Logo Pemprov Bali / Dinas PUPRPKIM -->
+                    <a href="https://dispuprkim.baliprov.go.id/" target="_blank" rel="noopener noreferrer">
+                        <img src="images/pemprov.png" alt="Pemprov Bali">
+                    </a>
+                </div>
+                <div class="title-block">
+                    <div class="title-text">
+                        Feasibility Study Jalan Penghubung Badung–Gianyar
+                    </div>
+                    <div class="subtitle-text">
+                        WebGIS Survei Pendahuluan &amp; Foto Geotagged
+                    </div>
+                </div>
+            </div>
+            <!-- ====== AKHIR LOGO + JUDUL ====== -->
+
+            <div id="popup" class="ol-popup">
+                <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+                <div id="popup-content"></div>
+            </div>
         </div>
-    </div>
 
-
-
-    <div class="footer">
-        <h5>&copy;2024 (beta version)</h5>
-    </div>
-
-</body>
-
+        <script src="resources/qgis2web_expressions.js"></script>
+        <script src="./resources/functions.js"></script>
+        <script src="./resources/ol.js"></script>
+        <script src="./resources/ol-layerswitcher.js"></script>
+        <script src="resources/photon-geocoder-autocomplete.min.js"></script>
+        <script src="layers/JalanProvinsi_4.js"></script>
+        <script src="layers/GetasanPayangan_5.js"></script>
+        <script src="layers/PelagaSidanBuahan_6.js"></script>
+        <script src="layers/PunggulBongkasaSayan_7.js"></script>
+        <script src="layers/JalanRencanaAlternative_8.js"></script>
+        <script src="layers/JalanSurvei_9.js"></script>
+        <script src="layers/SurveyPhotos_10.js"></script>
+        <script src="styles/JalanProvinsi_4_style.js"></script>
+        <script src="styles/GetasanPayangan_5_style.js"></script>
+        <script src="styles/PelagaSidanBuahan_6_style.js"></script>
+        <script src="styles/PunggulBongkasaSayan_7_style.js"></script>
+        <script src="styles/JalanRencanaAlternative_8_style.js"></script>
+        <script src="styles/JalanSurvei_9_style.js"></script>
+        <script src="styles/SurveyPhotos_10_style.js"></script>
+        <script src="./layers/layers.js" type="text/javascript"></script> 
+        <script src="./resources/Autolinker.min.js"></script>
+        <script src="./resources/qgis2web.js"></script>
+    </body>
 </html>
